# zighang-zighang-embedding

./: .env.template  .gitignore  model.py  opensearch_insert.py  opensearch_test.py  pyproject.toml  recruitment_db.py  test.py
